--- a/app/views/template/_menu.html.erb
+++ b/app/views/template/_menu.html.erb
@@ -3,91 +3,57 @@
     <a class="btn btn-link visible-xs" data-toggle="class:nav-off-screen,open" data-target="#nav,html">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="#" class="navbar-brand" data-toggle="fullscreen"><%= image_tag('logo.png' ,  class: 'm-r-sm') %> <%=  @store.store_name.titleize%></a>
+    <a href="#" class="navbar-brand" data-toggle="fullscreen"><%= image_tag('logo.png' ,  class: 'm-r-sm') %></a>
     <a class="btn btn-link visible-xs" data-toggle="dropdown" data-target=".nav-user">
       <i class="fa fa-cog"></i>
     </a>
   </div>
   <ul class="nav navbar-nav hidden-xs">
     <li class="dropdown">
-      <a href="<%= new_sale_path %>" class="dropdown-toggle dker" data-toggle="dropdown">
+      <a href="<%#= new_sale_path %>" class="dropdown-toggle dker" data-toggle="dropdown">
         <i class="fa fa-building-o"></i>
         <span class="font-bold">New Sale</span>
       </a>
-      <section class="dropdown-menu aside-xl on animated fadeInLeft no-borders lt">
-        <div class="wrapper lter m-t-n-xs">
-          <a href="#" class="thumb pull-left m-r">
-            <%= image_tag(current_user.photo , class: "img-circle") %>
-          </a>
-          <div class="clear">
-            <a href="#"><span class="text-white font-bold">Faizan</span></a>
-            <small class="block">Art Director</small>
-            <a href="#" class="btn btn-xs btn-success m-t-xs">Upgrade</a>
-          </div>
-        </div>
-        <div class="row m-l-none m-r-none m-b-n-xs text-center">
-          <div class="col-xs-4">
-            <div class="padder-v">
-              <span class="m-b-xs h4 block text-white">245</span>
-              <small class="text-muted">Followers</small>
-            </div>
-          </div>
-          <div class="col-xs-4 dk">
-            <div class="padder-v">
-              <span class="m-b-xs h4 block text-white">55</span>
-              <small class="text-muted">Likes</small>
-            </div>
-          </div>
-          <div class="col-xs-4">
-            <div class="padder-v">
-              <span class="m-b-xs h4 block text-white">2,035</span>
-              <small class="text-muted">Photos</small>
-            </div>
-          </div>
-        </div>
-      </section>
+      <!--<section class="dropdown-menu aside-xl on animated fadeInLeft no-borders lt">-->
+        <!--<div class="wrapper lter m-t-n-xs">-->
+          <!--<a href="#" class="thumb pull-left m-r">-->
+            <!--<%#= image_tag(current_user.photo , class: "img-circle") %>-->
+          <!--</a>-->
+          <!--<div class="clear">-->
+            <!--<a href="#"><span class="text-white font-bold">Faizan</span></a>-->
+            <!--<small class="block">Art Director</small>-->
+            <!--<a href="#" class="btn btn-xs btn-success m-t-xs">Upgrade</a>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="row m-l-none m-r-none m-b-n-xs text-center">-->
+          <!--<div class="col-xs-4">-->
+            <!--<div class="padder-v">-->
+              <!--<span class="m-b-xs h4 block text-white">245</span>-->
+              <!--<small class="text-muted">Followers</small>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="col-xs-4 dk">-->
+            <!--<div class="padder-v">-->
+              <!--<span class="m-b-xs h4 block text-white">55</span>-->
+              <!--<small class="text-muted">Likes</small>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="col-xs-4">-->
+            <!--<div class="padder-v">-->
+              <!--<span class="m-b-xs h4 block text-white">2,035</span>-->
+              <!--<small class="text-muted">Photos</small>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</section>-->
     </li>
     <li>
       <div class="m-t m-l">
-        <a href="price.html" class="dropdown-toggle btn btn-xs btn-primary" title="Upgrade"><i class="fa fa-long-arrow-up"></i></a>
+        <a href="#" class="dropdown-toggle btn btn-xs btn-primary" title="Upgrade"><i class="fa fa-long-arrow-up"></i></a>
       </div>
     </li>
   </ul>
   <ul class="nav navbar-nav navbar-right m-n hidden-xs nav-user">
-    <li class="hidden-xs">
-      <a href="#" class="dropdown-toggle dk" data-toggle="dropdown">
-        <i class="fa fa-bell"></i>
-        <span class="badge badge-sm up bg-danger m-l-n-sm count">2</span>
-      </a>
-      <section class="dropdown-menu aside-xl">
-        <section class="panel bg-white">
-          <header class="panel-heading b-light bg-light">
-            <strong>You have <span class="count">2</span> notifications</strong>
-          </header>
-          <div class="list-group list-group-alt animated fadeInRight">
-            <a href="#" class="media list-group-item">
-                  <span class="pull-left thumb-sm">
-                    <!--<img src="images/avatar.jpg" alt="John said" class="img-circle">-->
-                  </span>
-                  <span class="media-body block m-b-none">
-                    Use awesome animate.css<br>
-                    <small class="text-muted">10 minutes ago</small>
-                  </span>
-            </a>
-            <a href="#" class="media list-group-item">
-                  <span class="media-body block m-b-none">
-                    1.0 initial released<br>
-                    <small class="text-muted">1 hour ago</small>
-                  </span>
-            </a>
-          </div>
-          <footer class="panel-footer text-sm">
-            <a href="#" class="pull-right"><i class="fa fa-cog"></i></a>
-            <a href="#notes" data-toggle="class:show animated fadeInRight">See all the notifications</a>
-          </footer>
-        </section>
-      </section>
-    </li>
     <li class="dropdown hidden-xs">
       <a href="#" class="dropdown-toggle dker" data-toggle="dropdown"><i class="fa fa-fw fa-search"></i></a>
       <section class="dropdown-menu aside-xl animated fadeInUp">
@@ -110,12 +76,12 @@
             <span class="thumb-sm avatar pull-left">
               <%= image_tag current_user.photo %>
             </span>
-        <%= current_user.username.titleize %> <b class="caret"></b>
+        <%= current_user.username %> <b class="caret"></b>
       </a>
       <ul class="dropdown-menu animated fadeInRight">
         <span class="arrow top"></span>
         <li>
-          <%= link_to "Settings" , @store %>
+          <%= link_to "Settings" , "#" %>
         </li>
         <li>
           <a href="profile.html">Profile</a>
