--- a/app/views/item_categories/index.html.erb
+++ b/app/views/item_categories/index.html.erb
@@ -18,21 +18,22 @@
                   <li><a href="#">Separated link</a></li>
                 </ul>
               </div>
-              <a href="#new-item-category" data-toggle="new-item-category" class="btn btn-sm btn-success"><i class="fa fa-plus"></i> Create</a>
+              <a href="#new-item-category" class="btn btn btn-sm btn-primary" data-toggle="modal"><i class="fa fa-plus"></i> Create</a>
+              <!--<a href="#new-item-category" data-toggle="new-item-category" class="btn btn-sm btn-success"><i class="fa fa-plus"></i> Create</a>-->
             </div>
             <div class="col-sm-4 m-b-xs">
-              <div class="input-group">
-
-                <%= form_for item_categories_path do |f| %>
+              <%= form_for item_categories_path do |f| %>
+                <div class="input-group">
                     <%= f.text_field :name , class: "input-sm form-control"  , placeholder: "Search" %>
                     <span class="input-group-btn">
-                      <%= f.button "Go!" , class: "btn btn-sm btn-default" %>
+                        <%= f.button "Go!" , class: "btn btn-sm btn-default" %>
                     </span>
-                <%end%>
+                </div>
+              <%end%>
 
-
-              </div>
             </div>
+
+
           </div>
         </header>
         <section class="scrollable wrapper w-f">
@@ -60,7 +61,7 @@
                       <td><%=item_category.name%></td>
                       <td><%=item_category.description%></td>
                       <td class="text-right">
-                        <%=link_to raw("<i class= 'fa fa-pencil'></i>"),item_category_path(item_category), class: "btn btn-info",:method => :delete, data: {:confirm => "Are you sure you want to delete this category?"}%>
+                        <%=link_to raw("<i class= 'fa fa-pencil'></i>"),item_category_path(item_category), class: "btn btn-info"%>
                         <%=link_to raw("<i class= 'fa fa-times'></i>"),item_category_path(item_category), class: "btn btn-danger",:method => :delete, data: {:confirm => "Are you sure you want to delete this category?"}%>
                       </td>
 
