--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <meta name="robots" content="noindex">
       <meta name="googlebot" content="noindex">
-      <title><%= @store.store_name.blank? ? "Tend360 Point of Sale" : @store.store_name %></title>
-      <meta name="description" content="<%= @store.store_description.blank? ? "Tend360 Point of Sale" : @store.store_description %>">
+      <title><%= current_user.company_name %></title>
+      <meta name="description" content="<%= current_user.company_description %>">
       <meta name="viewport" content ="width=device-width; initial-scale=1.0;">
       <%= javascript_include_tag :application, "data-turbolinks-track" => true %>
       <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
