--- a/app/views/template/_left_aside.html.erb
+++ b/app/views/template/_left_aside.html.erb
@@ -1,22 +1,22 @@
 <!-- .aside -->
 <aside class="bg-dark lter aside-md hidden-print" id="nav">
   <section class="vbox">
-    <header class="header bg-primary lter text-center clearfix">
-      <div class="btn-group">
-        <button type="button" class="btn btn-sm btn-dark btn-icon" title="New project"><i class="fa fa-plus"></i></button>
-        <div class="btn-group hidden-nav-xs">
-          <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown">
-            Switch Project
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu text-left">
-            <li><a href="#">Project</a></li>
-            <li><a href="#">Another Project</a></li>
-            <li><a href="#">More Projects</a></li>
-          </ul>
-        </div>
-      </div>
-    </header>
+    <!--<header class="header bg-primary lter text-center clearfix">-->
+      <!--&lt;!&ndash;<div class="btn-group">&ndash;&gt;-->
+        <!--&lt;!&ndash;<button type="button" class="btn btn-sm btn-dark btn-icon" title="New project"><i class="fa fa-plus"></i></button>&ndash;&gt;-->
+        <!--&lt;!&ndash;<div class="btn-group hidden-nav-xs">&ndash;&gt;-->
+          <!--&lt;!&ndash;<button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown">&ndash;&gt;-->
+            <!--&lt;!&ndash;Switch Project&ndash;&gt;-->
+            <!--&lt;!&ndash;<span class="caret"></span>&ndash;&gt;-->
+          <!--&lt;!&ndash;</button>&ndash;&gt;-->
+          <!--&lt;!&ndash;<ul class="dropdown-menu text-left">&ndash;&gt;-->
+            <!--&lt;!&ndash;<li><a href="#">Project</a></li>&ndash;&gt;-->
+            <!--&lt;!&ndash;<li><a href="#">Another Project</a></li>&ndash;&gt;-->
+            <!--&lt;!&ndash;<li><a href="#">More Projects</a></li>&ndash;&gt;-->
+          <!--&lt;!&ndash;</ul>&ndash;&gt;-->
+        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+      <!--&lt;!&ndash;</div>&ndash;&gt;-->
+    <!--</header>-->
     <section class="w-f scrollable">
       <div class="slim-scroll" data-height="auto" data-disable-fade-out="true" data-distance="0" data-size="5px" data-color="#333333">
 
@@ -24,7 +24,7 @@
         <nav class="nav-primary hidden-xs">
           <ul class="nav">
             <li  class="<%= dashboard_active  %>">
-              <a href="/"   class="<%= dashboard_active %>">
+              <a href="<%= dashboard_index_path %>"   class="<%= dashboard_active %>">
                 <i class="fa fa-dashboard icon">
                   <b class="bg-danger"></b>
                 </i>
@@ -33,7 +33,7 @@
             </li>
             <li  class="<%= users_active  %>">
               <a href="<%= users_path %>"  class="<%= users_active  %>" >
-                <i class="fa fa-columns icon">
+                <i class="fa fa-user icon">
                   <b class="bg-warning"></b>
                 </i>
                         <span class="pull-right">
@@ -43,146 +43,24 @@
                 <span>Users</span>
               </a>
             </li>
-            <li class="<%= item_categories_active%>" >
+            <li >
               <a href="<%= item_categories_path %>" class="<%= item_categories_active%>" >
                 <i class="fa fa-rocket icon">
                   <b class="bg-info"></b>
                 </i>
-                <span>Item Categories</span>
+                <span>sales</span>
               </a>
             </li>
             <li >
-              <a href="#uikit"  >
-                <i class="fa fa-flask icon">
-                  <b class="bg-success"></b>
+              <a href="#" class="<% item_categories_active%>" >
+                <i class="fa fa-pencil-square-o icon">
+                  <b class="bg-info"></b>
                 </i>
-                        <span class="pull-right">
-                          <i class="fa fa-angle-down text"></i>_path
-                          <i class="fa fa-angle-up text-active"></i>
-                        </span>
-                <span>Items</span>
+                <span>Reports</span>
               </a>
-              <ul class="nav lt">
-                <li >
-                  <a href="buttons.html" >
-                    <i class="fa fa-angle-right"></i>
-                    <span>Buttons</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="icons.html" >
-                    <b class="badge bg-info pull-right">369</b>
-                    <i class="fa fa-angle-right"></i>
-                    <span>Icons</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="grid.html" >
-                    <i class="fa fa-angle-right"></i>
-                    <span>Grid</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="widgets.html" >
-                    <b class="badge  pull-right">8</b>
-                    <i class="fa fa-angle-right"></i>
-                    <span>Widgets</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="components.html" >
-                    <i class="fa fa-angle-right"></i>
-                    <span>Components</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="list.html" >
-                    <i class="fa fa-angle-right"></i>
-                    <span>List group</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="#table" >
-                    <i class="fa fa-angle-down text"></i>
-                    <i class="fa fa-angle-up text-active"></i>
-                    <span>Table</span>
-                  </a>
-                  <ul class="nav bg">
-                    <li >
-                      <a href="table-static.html" >
-                        <i class="fa fa-angle-right"></i>
-                        <span>Table static</span>
-                      </a>
-                    </li>
-                    <li >
-                      <a href="table-datatable.html" >
-                        <i class="fa fa-angle-right"></i>
-                        <span>Datatable</span>
-                      </a>
-                    </li>
-                    <li >
-                      <a href="table-datagrid.html" >
-                        <i class="fa fa-angle-right"></i>
-                        <span>Datagrid</span>
-                      </a>
-                    </li>
-                  </ul>
-                </li>
-                <li >
-                  <a href="#form" >
-                    <i class="fa fa-angle-down text"></i>
-                    <i class="fa fa-angle-up text-active"></i>
-                    <span>Form</span>
-                  </a>
-                  <ul class="nav bg">
-                    <li >
-                      <a href="form-elements.html" >
-                        <i class="fa fa-angle-right"></i>
-                        <span>Form elements</span>
-                      </a>
-                    </li>
-                    <li >
-                      <a href="form-validation.html" >
-                        <i class="fa fa-angle-right"></i>
-                        <span>Form validation</span>
-                      </a>
-                    </li>
-                    <li >
-                      <a href="form-wizard.html" >
-                        <i class="fa fa-angle-right"></i>
-                        <span>Form wizard</span>
-                      </a>
-                    </li>
-                  </ul>
-                </li>
-                <li >
-                  <a href="chart.html" >
-                    <i class="fa fa-angle-right"></i>
-                    <span>Chart</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="fullcalendar.html" >
-                    <i class="fa fa-angle-right"></i>
-                    <span>Fullcalendar</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="portlet.html" >
-                    <i class="fa fa-angle-right"></i>
-                    <span>Portlet</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="timeline.html" >
-                    <i class="fa fa-angle-right"></i>
-                    <span>Timeline</span>
-                  </a>
-                </li>
-              </ul>
             </li>
-            <li >
-              <a href="#pages"  >
+            <li class="<%= item_categories_active%>" >
+              <a href="#item_category"  class="<%= item_categories_active%>" >
                 <i class="fa fa-file-text icon">
                   <b class="bg-primary"></b>
                 </i>
@@ -190,67 +68,25 @@
                           <i class="fa fa-angle-down text"></i>
                           <i class="fa fa-angle-up text-active"></i>
                         </span>
-                <span>Sales</span>
+                <span>Items</span>
               </a>
               <ul class="nav lt">
                 <li >
-                  <a href="gallery.html" >
+                  <a href="<%= item_categories_path %>" class="<%= item_categories_active%>" >
                     <i class="fa fa-angle-right"></i>
-                    <span>Gallery</span>
+                    <span>Items Category</span>
                   </a>
                 </li>
                 <li >
-                  <a href="profile.html" >
+                  <a href="<%= items_path %>" class="<%= item_categories_active%>" >
                     <i class="fa fa-angle-right"></i>
-                    <span>Profile</span>
+                    <span>Items</span>
                   </a>
                 </li>
                 <li >
-                  <a href="invoice.html" >
+                  <a href="<%= items_path %>" class="<%= item_categories_active%>" >
                     <i class="fa fa-angle-right"></i>
-                    <span>Invoice</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="intro.html" >
-                    <i class="fa fa-angle-right"></i>
-                    <span>Intro</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="master.html" >
-                    <i class="fa fa-angle-right"></i>
-                    <span>Master</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="gmap.html" >
-                    <i class="fa fa-angle-right"></i>
-                    <span>Google Map</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="jvectormap.html" >
-                    <i class="fa fa-angle-right"></i>
-                    <span>Vector Map</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="signin.html" >
-                    <i class="fa fa-angle-right"></i>
-                    <span>Signin</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="signup.html" >
-                    <i class="fa fa-angle-right"></i>
-                    <span>Signup</span>
-                  </a>
-                </li>
-                <li >
-                  <a href="404.html" >
-                    <i class="fa fa-angle-right"></i>
-                    <span>404</span>
+                    <span>Purchase Items</span>
                   </a>
                 </li>
               </ul>
@@ -262,38 +98,10 @@
     </section>
 
     <footer class="footer lt hidden-xs b-t b-dark">
-      <div id="chat" class="dropup">
-        <section class="dropdown-menu on aside-md m-l-n">
-          <section class="panel bg-white">
-            <header class="panel-heading b-b b-light">Active chats</header>
-            <div class="panel-body animated fadeInRight">
-              <p class="text-sm">No active chats.</p>
-              <p><a href="#" class="btn btn-sm btn-default">Start a chat</a></p>
-            </div>
-          </section>
-        </section>
-      </div>
-      <div id="invite" class="dropup">
-        <section class="dropdown-menu on aside-md m-l-n">
-          <section class="panel bg-white">
-            <header class="panel-heading b-b b-light">
-              John <i class="fa fa-circle text-success"></i>
-            </header>
-            <div class="panel-body animated fadeInRight">
-              <p class="text-sm">No contacts in your lists.</p>
-              <p><a href="#" class="btn btn-sm btn-facebook"><i class="fa fa-fw fa-facebook"></i> Invite from Facebook</a></p>
-            </div>
-          </section>
-        </section>
-      </div>
       <a href="#nav" data-toggle="class:nav-xs" class="pull-right btn btn-sm btn-dark btn-icon">
         <i class="fa fa-angle-left text"></i>
         <i class="fa fa-angle-right text-active"></i>
       </a>
-      <div class="btn-group hidden-nav-xs">
-        <button type="button" title="Chats" class="btn btn-icon btn-sm btn-dark" data-toggle="dropdown" data-target="#chat"><i class="fa fa-comment-o"></i></button>
-        <button type="button" title="Contacts" class="btn btn-icon btn-sm btn-dark" data-toggle="dropdown" data-target="#invite"><i class="fa fa-facebook"></i></button>
-      </div>
     </footer>
   </section>
 </aside>
