--- a/app/views/template/_left_aside.html.erb
+++ b/app/views/template/_left_aside.html.erb
@@ -32,7 +32,7 @@
               </a>
             </li>
             <li  class="<%= users_active  %>">
-              <a href="<%= users_path %>"  class="<%= users_active  %>" >
+              <a href="#"  class="<%= users_active  %>" >
                 <i class="fa fa-user icon">
                   <b class="bg-warning"></b>
                 </i>
