--- a/app/views/template/_menu.html.erb
+++ b/app/views/template/_menu.html.erb
@@ -83,18 +83,18 @@
         <li>
           <%= link_to "Settings" , "#" %>
         </li>
-        <li>
-          <a href="profile.html">Profile</a>
-        </li>
-        <li>
-          <a href="#">
-            <span class="badge bg-danger pull-right">3</span>
-            Notifications
-          </a>
-        </li>
-        <li>
-          <a href="docs.html">Help</a>
-        </li>
+        <!--<li>-->
+          <!--<a href="profile.html">Profile</a>-->
+        <!--</li>-->
+        <!--<li>-->
+          <!--<a href="#">-->
+            <!--<span class="badge bg-danger pull-right">3</span>-->
+            <!--Notifications-->
+          <!--</a>-->
+        <!--</li>-->
+        <!--<li>-->
+          <!--<a href="docs.html">Help</a>-->
+        <!--</li>-->
         <li class="divider"></li>
         <li>
           <%= link_to( "Logout" , destroy_user_session_path, :method => :delete) %>
