--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -18,7 +18,7 @@
                     </span>
             <a class="clear" href="#">
               <span class="h3 block m-t-xs"><strong>52,000</strong></span>
-              <small class="text-muted text-uc">New robots</small>
+              <small class="text-muted text-uc"></small>
             </a>
           </div>
           <div class="col-sm-6 col-md-3 padder-v b-r b-light lt">
@@ -29,7 +29,7 @@
                     </span>
             <a class="clear" href="#">
               <span class="h3 block m-t-xs"><strong id="bugs">468</strong></span>
-              <small class="text-muted text-uc">Bugs intruded</small>
+              <small class="text-muted text-uc"></small>
             </a>
           </div>
           <div class="col-sm-6 col-md-3 padder-v b-r b-light">
@@ -40,7 +40,7 @@
                     </span>
             <a class="clear" href="#">
               <span class="h3 block m-t-xs"><strong id="firers">359</strong></span>
-              <small class="text-muted text-uc">Extinguishers ready</small>
+              <small class="text-muted text-uc"></small>
             </a>
           </div>
           <div class="col-sm-6 col-md-3 padder-v b-r b-light lt">
@@ -49,8 +49,8 @@
                       <i class="fa fa-clock-o fa-stack-1x text-white"></i>
                     </span>
             <a class="clear" href="#">
-              <span class="h3 block m-t-xs"><strong>31:50</strong></span>
-              <small class="text-muted text-uc">Left to exit</small>
+              <span class="h3 block m-t-xs"><strong>3150</strong></span>
+              <small class="text-muted text-uc"></small>
             </a>
           </div>
         </div>
