--- a/app/views/template/_left_aside.html.erb
+++ b/app/views/template/_left_aside.html.erb
@@ -46,7 +46,7 @@
             <li >
               <a href="<%= item_categories_path %>" class="<%= item_categories_active%>" >
                 <i class="fa fa-rocket icon">
-                  <b class="bg-info"></b>
+                  <b class="bg-success"></b>
                 </i>
                 <span>sales</span>
               </a>
