--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -8,10 +8,11 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ *= require amaran/amaran.min
  *= require bootstrap
  *= require animate
  *= require font-awesome.min
  *= require font
+ *= require landing
  *= require app
- *= require amaran/amaran.min
  */
