--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <div class="m-t-sm"> <a href="<%=new_user_session_path%>" class="btn btn-sm btn-success m-l"><strong>Sign in</strong></a></div>
+          <div class="m-t-sm"> <a href="<%=new_user_session_path%>" class="btn btn-sm btn-info m-l"><strong>Sign in</strong></a></div>
         </li>
       </ul>
     </div>
@@ -140,45 +140,45 @@
       </div>
     </div>
   </div>
-  <div id="responsive" class="bg-dark">
-    <div class="text-center">
-      <div class="container">
-        <div class="m-t-xl m-b-xl wrapper">
-          <h3 class="text-white">Your application will works no matter where you are</h3>
-          <!--<p>You can use your application at anywhere in the world. <br>This template works on <span class="text-primary text-ul">mobile device</span> too.</p>-->
-        </div>
-        <div class="row m-t-xl m-b-xl">
-          <div class="col-sm-4 wrapper-xl" data-ride="animated" data-animation="fadeInLeft" data-delay="300">
-            <p class="text-center h2 m-b-lg m-t-lg">
-                <span class="fa-stack fa-2x">
-                  <i class="fa fa-circle fa-stack-2x text-dark"></i>
-                  <i class="fa fa-mobile fa-stack-1x text-muted"></i>
-                </span>
-            </p>
-            <p>Mobile</p>
-          </div>
-          <div class="col-sm-4 wrapper-xl" data-ride="animated" data-animation="fadeInLeft" data-delay="600">
-            <p class="text-center h1 m-b-lg">
-                <span class="fa-stack fa-2x">
-                  <i class="fa fa-circle fa-stack-2x text-dark"></i>
-                  <i class="fa fa-tablet fa-stack-1x text-muted"></i>
-                </span>
-            </p>
-            <p>Tablet</p>
-          </div>
-          <div class="col-sm-4 wrapper-xl" data-ride="animated" data-animation="fadeInLeft" data-delay="900">
-            <p class="text-center h2 m-b-lg m-t-lg">
-                <span class="fa-stack fa-2x">
-                  <i class="fa fa-circle fa-stack-2x text-dark"></i>
-                  <i class="fa fa-desktop fa-stack-1x text-muted text-md"></i>
-                </span>
-            </p>
-            <p>Desktop</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <!--<div id="responsive" class="bg-dark">-->
+    <!--<div class="text-center">-->
+      <!--<div class="container">-->
+        <!--<div class="m-t-xl m-b-xl wrapper">-->
+          <!--<h3 class="text-white">Your application will works no matter where you are</h3>-->
+          <!--&lt;!&ndash;<p>You can use your application at anywhere in the world. <br>This template works on <span class="text-primary text-ul">mobile device</span> too.</p>&ndash;&gt;-->
+        <!--</div>-->
+        <!--<div class="row m-t-xl m-b-xl">-->
+          <!--<div class="col-sm-4 wrapper-xl" data-ride="animated" data-animation="fadeInLeft" data-delay="300">-->
+            <!--<p class="text-center h2 m-b-lg m-t-lg">-->
+                <!--<span class="fa-stack fa-2x">-->
+                  <!--<i class="fa fa-circle fa-stack-2x text-dark"></i>-->
+                  <!--<i class="fa fa-mobile fa-stack-1x text-muted"></i>-->
+                <!--</span>-->
+            <!--</p>-->
+            <!--<p>Mobile</p>-->
+          <!--</div>-->
+          <!--<div class="col-sm-4 wrapper-xl" data-ride="animated" data-animation="fadeInLeft" data-delay="600">-->
+            <!--<p class="text-center h1 m-b-lg">-->
+                <!--<span class="fa-stack fa-2x">-->
+                  <!--<i class="fa fa-circle fa-stack-2x text-dark"></i>-->
+                  <!--<i class="fa fa-tablet fa-stack-1x text-muted"></i>-->
+                <!--</span>-->
+            <!--</p>-->
+            <!--<p>Tablet</p>-->
+          <!--</div>-->
+          <!--<div class="col-sm-4 wrapper-xl" data-ride="animated" data-animation="fadeInLeft" data-delay="900">-->
+            <!--<p class="text-center h2 m-b-lg m-t-lg">-->
+                <!--<span class="fa-stack fa-2x">-->
+                  <!--<i class="fa fa-circle fa-stack-2x text-dark"></i>-->
+                  <!--<i class="fa fa-desktop fa-stack-1x text-muted text-md"></i>-->
+                <!--</span>-->
+            <!--</p>-->
+            <!--<p>Desktop</p>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
   <!--<div id="newsletter" class="bg-white clearfix wrapper-lg">-->
     <!--<div class="container text-center m-t-xl m-b-xl" data-ride="animated" data-animation="fadeIn">-->
       <!--<h2>Newsletter</h2>-->
@@ -192,3 +192,5 @@
     <!--</div>-->
   <!--</div>-->
 </section>
+
+<%= render 'template/footer' %>
