left nav bar color changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 
     </head>
     
-    <body>
+    <body class="bg-light lter b-r aside-md" >
         <section class="vbox">
           <% if user_signed_in? %>
               <%= render partial: 'template/menu' %>
