--- a/app/views/template/_menu.html.erb
+++ b/app/views/template/_menu.html.erb
@@ -10,7 +10,7 @@
   </div>
   <ul class="nav navbar-nav hidden-xs">
     <li class="dropdown">
-      <a href="<%#= new_sale_path %>" class="dropdown-toggle dker" data-toggle="dropdown">
+      <a href="<%= new_sale_path %>">
         <i class="fa fa-building-o"></i>
         <span class="font-bold">New Sale</span>
       </a>
