--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="form-group col-md-6">
-                    <button type="submit" class="btn btn-primary btn-lg btn-block">Sign up</button>
+                    <button type="submit" class="btn btn-info btn-lg btn-block">Sign up</button>
                 </div>
 
                 <div class="line line-dashed col-md-12 m-b-md"></div>
