--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,8 +7,8 @@
   <%= f.password_field :password, :class => 'form-control', :placeholder => 'Password' %>
   <%= f.password_field :password_confirmation, :class => 'form-control', :placeholder => 'Password Confirmation' %>
 
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+  <button class="btn btn-lg btn-info btn-block" type="submit">Sign up</button>
   <%= render "devise/shared/links" %>
-  <p class="copyright">Copyright &copy; 2013 PushVendor</p>
+  <p class="copyright">Copyright &copy; 2016 TEnd360</p>
 <% end %>
 
