--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,12 +1,22 @@
-<h2>Resend confirmation instructions</h2>
+<section id="content" class="m-t-lg wrapper-md animated fadeInUp">
+  <div class="container aside-xxl">
+    <section class="m-t-lg">
+    <h2>Resend confirmation instructions</h2>
+    <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
+      <%= devise_error_messages! %>
 
-<%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+          <div >
+            <label class="control-label">Email</label>
+            <%= f.email_field :email, :class => 'form-control input-lg', :placeholder => 'test@example.com', required: true, autofocus: true, email: true %>
+          </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+          <div class="form-group " >
+            <button class="btn btn-info btn-lg btn-block" value="Reset" type="submit">Reset and send me instructions</button>
+          </div>
+    <% end %>
 
-  <div><%= f.submit "Resend confirmation instructions" %></div>
-<% end %>
+    <%= render "devise/shared/links" %>
+</section>
 
-<%= render "devise/shared/links" %>
+</div>
+</section>
