--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,22 @@
-<h2>Forgot your password?</h2>
+<section id="content" class="m-t-lg wrapper-md animated fadeInUp">
+  <div class="container aside-xxl">
+    <section class="m-t-lg">
+        <h2>Forgot your password?</h2>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+        <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+          <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+            <div >
+            <label class="control-label">Email</label>
+            <%= f.email_field :email, :class => 'form-control input-lg', :placeholder => 'test@example.com', required: true, autofocus: true, email: true %>
+            </div>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
-<% end %>
+          <div class="form-group " >
+            <button class="btn btn-info btn-lg btn-block" value="Reset" type="submit">Reset and send me instructions</button>
+          </div>
+        <% end %>
 
-<%= render "devise/shared/links" %>
+        <%= render "devise/shared/links" %>
+    </section>
+  </div>
+</section>
